--- a/app/src/main/res/layout/fragment_giao_dich.xml
+++ b/app/src/main/res/layout/fragment_giao_dich.xml
@@ -8,7 +8,7 @@
     tools:context=".packageDangKyDangNhap.packageDangNhap.packageThongTinUser.GiaoDichFragment">
 
     <TextView
-        android:id="@+id/txtHoVaTenTT"
+        android:id="@+id/txtHVTGD"
         android:layout_width="190dp"
         android:layout_height="42dp"
         android:layout_marginTop="100dp"
@@ -57,7 +57,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/txtHoVaTenTT" />
+        app:layout_constraintTop_toBottomOf="@+id/txtHVTGD" />
 
     <TextView
         android:id="@+id/textView8"
@@ -104,6 +104,6 @@
         android:textColor="@color/cardview_dark_background"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtHoVaTenTT" />
+        app:layout_constraintTop_toBottomOf="@+id/txtHVTGD" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
