--- a/app/src/main/res/layout/activity_lich_chieu_phim.xml
+++ b/app/src/main/res/layout/activity_lich_chieu_phim.xml
@@ -21,34 +21,13 @@
                 android:layout_height="wrap_content"
                 android:padding="10sp">
 
-                <Spinner
-                    android:id="@+id/spinDiaDiem"
-                    android:layout_width="0dp"
-                    android:layout_height="46dp"
-                    android:layout_marginTop="24dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-
-                    />
-
-                <Spinner
-                    android:id="@+id/spinRap"
-                    android:layout_width="0dp"
-                    android:layout_height="46dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
-
-                    />
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/relativeLayout"
                     android:layout_width="0dp"
                     android:layout_height="46dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/spinDiaDiem">
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <EditText
                         android:id="@+id/txtLichChieu"
