--- a/app/src/main/res/layout/recyclerview_lichchieu.xml
+++ b/app/src/main/res/layout/recyclerview_lichchieu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,64 +20,52 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/txtTenTinh"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
-
         <Button
             android:id="@+id/btnGioChieu1"
             android:layout_width="80dp"
             android:layout_height="36dp"
-            android:layout_marginTop="10dp"
             android:backgroundTint="#FFFFFF"
             android:gravity="center"
             android:textAlignment="center"
             android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtTenTinh" />
+            app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
 
         <Button
             android:id="@+id/btnGioChieu2"
             android:layout_width="80dp"
             android:layout_height="36dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:backgroundTint="#FFFFFF"
             android:gravity="center"
             android:textAlignment="center"
             android:textColor="#000000"
             app:layout_constraintStart_toEndOf="@+id/btnGioChieu1"
-            app:layout_constraintTop_toBottomOf="@+id/txtTenTinh" />
+            app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
 
         <Button
             android:id="@+id/btnGioChieu3"
             android:layout_width="80dp"
             android:layout_height="36dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:backgroundTint="#FFFFFF"
             android:gravity="center"
             android:textAlignment="center"
             android:textColor="#000000"
             app:layout_constraintStart_toEndOf="@+id/btnGioChieu2"
-            app:layout_constraintTop_toBottomOf="@+id/txtTenTinh" />
+            app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
 
         <Button
             android:id="@+id/btnGioChieu4"
             android:layout_width="80dp"
             android:layout_height="36dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:backgroundTint="#FFFFFF"
             android:gravity="center"
             android:textAlignment="center"
             android:textColor="#000000"
             app:layout_constraintStart_toEndOf="@+id/btnGioChieu3"
-            app:layout_constraintTop_toBottomOf="@+id/txtTenTinh" />
+            app:layout_constraintTop_toBottomOf="@+id/txtTenRap" />
 
         <Button
             android:id="@+id/btnGioChieu5"
