--- a/app/src/main/res/layout/recyclerview_binhluan.xml
+++ b/app/src/main/res/layout/recyclerview_binhluan.xml
@@ -74,6 +74,27 @@
             app:layout_constraintStart_toEndOf="@+id/textViews"
             app:layout_constraintTop_toTopOf="@+id/textViews" />
 
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="Giờ:"
+            android:textColor="#2196F3"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/txtNgayBinhLuan"
+            app:layout_constraintTop_toBottomOf="@+id/txtNoiDungBinhLuan" />
+
+        <TextView
+            android:id="@+id/txtGioBinhLuan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:layout_marginStart="5dp"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/textView9"
+            app:layout_constraintTop_toBottomOf="@+id/txtNoiDungBinhLuan" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
