--- a/app/src/main/res/layout/thongtin.xml
+++ b/app/src/main/res/layout/thongtin.xml
@@ -144,6 +144,15 @@
                 android:background="#FFFFFF"
                 android:padding="10sp">
 
+                <TextView
+                    android:id="@+id/txtDanhGiaNguoiDung"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:textColor="#2196F3"
+                    app:layout_constraintStart_toStartOf="@+id/textView13"
+                    app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
                 <ImageView
                     android:id="@+id/imgXH1"
                     android:layout_width="wrap_content"
@@ -247,19 +256,19 @@
                     android:id="@+id/textView15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="6dp"
                     android:text="Độ tuổi: "
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView13" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtDanhGiaNguoiDung" />
 
                 <TextView
                     android:id="@+id/txtDoTuoi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="68dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginTop="35dp"
                     app:layout_constraintStart_toEndOf="@+id/textView15"
-                    app:layout_constraintTop_toBottomOf="@+id/imgXH6" />
+                    app:layout_constraintTop_toBottomOf="@+id/imgXH1" />
 
                 <TextView
                     android:id="@+id/textView17"
