Thêm Fragment tab User

--- a/app/src/main/res/layout/fragment_dangnhap.xml
+++ b/app/src/main/res/layout/fragment_dangnhap.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:paddingStart="40dp"
     android:paddingEnd="40dp"
+    android:id="@+id/DangNhap_Fragment_layout"
     tools:context=".MainActivity">
 
     <ScrollView
