--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@color/white"
         app:itemBackground="@color/white"
         app:itemIconTint="@color/custom_color_bottom_trangchu"
         app:itemTextColor="@color/custom_color_bottom_trangchu"
