--- a/app/src/main/res/layout/activity_so_do_ghe.xml
+++ b/app/src/main/res/layout/activity_so_do_ghe.xml
@@ -69,7 +69,7 @@
                     android:text="2" />
 
                 <Button
-                    android:id="@+id/button8"
+                    android:id="@+id/btnA3"
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
