--- a/app/src/main/res/layout/activity_so_do_ghe.xml
+++ b/app/src/main/res/layout/activity_so_do_ghe.xml
@@ -59,6 +59,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="1" />
 
                 <Button
@@ -66,6 +67,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="2" />
 
                 <Button
@@ -73,6 +75,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="3" />
 
                 <Button
@@ -80,6 +83,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="4" />
 
                 <Button
@@ -87,6 +91,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="5" />
 
             </TableRow>
@@ -100,6 +105,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="1" />
 
                 <Button
@@ -107,6 +113,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="2" />
 
                 <Button
@@ -114,6 +121,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="3" />
 
                 <Button
@@ -121,6 +129,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="4" />
 
                 <Button
@@ -128,6 +137,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="5" />
             </TableRow>
 
@@ -141,6 +151,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="1" />
 
                 <Button
@@ -148,6 +159,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="2" />
 
                 <Button
@@ -155,6 +167,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="3" />
 
                 <Button
@@ -162,6 +175,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="4" />
 
                 <Button
@@ -169,6 +183,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="5" />
             </TableRow>
 
@@ -181,6 +196,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="1" />
 
                 <Button
@@ -188,6 +204,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="2" />
 
                 <Button
@@ -195,6 +212,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="3" />
 
                 <Button
@@ -202,6 +220,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="4" />
 
                 <Button
@@ -209,6 +228,7 @@
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/custom_ghe"
+                    android:backgroundTint="#F8F2F2"
                     android:text="5" />
             </TableRow>
         </TableLayout>
